Add redis integration
